--- a/views/squadlist.ejs
+++ b/views/squadlist.ejs
@@ -18,6 +18,37 @@
          <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
          <link rel="manifest" href="/site.webmanifest">
+         <style>
+            .product h2{
+    
+    font-size: 25px;
+    text-align: center;
+    padding: 18px 0;
+}
+.description{
+    display: block;
+    text-align: left ;
+    font-size: 17px;
+    padding: 0px 25px;
+    font-weight: 600;
+    font-family:system-ui;
+    
+    
+    }
+.overview-description{
+    display: block;
+    font-size: 16px;
+    padding: 25px;
+    padding-top: 5px;
+    font-family:system-ui;
+    text-align: left;
+    
+
+}
+
+
+
+</style>
         </head>
      <body>
        
@@ -59,7 +90,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="/logout" class="login">Logout</a></li>
@@ -74,43 +105,19 @@
              
          </section>
          
-            <section class="overview" >
-             
-                <div class="row">
-                   <div class="overview-col">
-                       <div class="welcome-text">
-                     
-                        <h2>SQUAD LIST</h2>
-                       
-                        </div>
-                        
-                       
-
-        
-                       
-                      
-                       
-                    <P>
-   
-                        Soil health and crop productivity are crucial factors in agriculture, playing a pivotal role in maintaining a sustainable environment.
-                         The primary cause of soil degradation is the excessive use of fertilizers. Therefore, it is essential to conduct soil testing before 
-                         initiating agriculture. Soil testing holds significance for various reasons: optimizing crop production, improving the nutritional 
-                         balance of the growing media, and saving money and energy by applying only the necessary amount of fertilizer. Our solution is designed 
-                         to assist farmers comprehensively, including monitoring soil conditions and nutrients. Data collected from the monitoring system will be
-                          stored on a cloud server for analysis. The primary objective is to keep track of nutrient levels in the soil.
-                         Having knowledge of their soil before commencing farming will aid farmers in precise cultivation planning.
-                    </P>
-                           
-                        
-                   </div>
-                     
-               </div>
-              
-           </section>
+          
            
               
               <section class="product">
                <div class="row1">
+                
+                <h2>SQUAD LIST</h2>
+                <span class="description"> Description </span>
+                <span class="overview-description">
+                    Manage elections more effectively with the comprehensive voter database feature for squad . Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
+                    streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for squad .</span>
+                 
+                
                 <a href="/138squad1" class="class1">
                     <div class="product-col " >
                         
@@ -118,7 +125,7 @@
                             <div>
                                 <h3>Squad 1</h3>
                                 
-                            <p>The voting pattern and management of squad1.</p>
+                            <p>The voting pattern and management of squad 1.</p>
                                         
                             </div>
                                 
@@ -131,7 +138,7 @@
                             <div>
                             <h3>Squad 2</h3>
                             
-                            <p>The voting pattern and management of squad2.</p>
+                            <p>The voting pattern and management of squad 2.</p>
                             </div>        
                         
                                
@@ -144,7 +151,7 @@
                                  <div>
                                  <h3>Squad 3</h3>
                                  
-                                 <p>The voting pattern and management of squad3.</p>
+                                 <p>The voting pattern and management of squad 3.</p>
                                  </div>        
                              
                                     
@@ -162,7 +169,7 @@
                             <div>
                                 <h3>Squad 4</h3>
                                 
-                            <p>The voting pattern and management of squad4.</p>
+                            <p>The voting pattern and management of squad 4.</p>
                                         
                             </div>
                                 
@@ -175,7 +182,7 @@
                             <div>
                             <h3>Squad 5</h3>
                             
-                            <p>The voting pattern and management of squad5.</p>
+                            <p>The voting pattern and management of squad 5.</p>
                             </div>        
                         
                                
@@ -193,59 +200,17 @@
          
         
 
-       <section class="footer">
+               <section class="footer">
           
-       
-            <div class="row">
-                <div class="footer-col1" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                   
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col1"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col1"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-                <hr>
+        
             
-                <div class="footer-col1"  >
-                    
-                    
-                    <p>Home</p>
-                    <p>Product</p>
-                    <p>About</p>
-                    <p>Contact</p>
+                <div class="footer-col" style="text-align: center;" >     
+                
+                      
+                       <p > 	&copy; Gokuljith k</p>
+                   
                 </div>
-            <hr>
-    </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+       </section>
    <script>
     // Get current date and time
     var now = new Date();
