--- a/views/alert.ejs
+++ b/views/alert.ejs
@@ -88,7 +88,7 @@
              
             <div class="row">
                <div class="overview-col">
-                   <h1>DELETE ARCHIVE</h1>
+                   <h1>DELETE VOTER</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
                     Are you sure you want to delete this item? This action cannot be undone. Proceed with caution. Confirm deletion to permanently remove the item from the database.
@@ -111,35 +111,24 @@
        
          
        <section class="contact">
-        <h1>Delete Soil Data</h1>
-        <span class="description"> User Instructions</span>
-                   <span class="overview-description">
-                    <ul class="overview-description">
-                      <li>Keep in mind that deleted data cannot be recovered once permanently deleted.</li>
-                      <li>To delete, click on the delete icon provided.</li>
-                      <li>For any inquiries, contact the Telinso team for assistance.</li>
-                    </ul>
-                   </span>
+    
+        
        
            
         <div class="contact-row" >
             
-                    <p onclick="goback()" > <%= message %> </p>
-                    <script>
-                        function goback() {
-                            window.history.back();
-                        } 
-                    </script>
-                    <div class="data" id="myUL" style="flex-direction: row;">
-                        <div class="soildata" style="grid-template-columns: auto;">
+                    
+                    
+                    <div class="data" id="myUL" style="grid-template-columns: 80% auto; display: grid;">
+                        
                         <p><%= votername %></p>
-                        <P><%= serialno %></P>
-                        </div>
-                        <div class="feature-archive" style="margin: 5px;">
-                        <a href="/alert/delete/<%=id%>"><i class="fa-solid fa-trash"></i></a>
+                      
                         
-                        </div>
+                  
+                        <a class="features" href="/alert/delete/<%=id%>"><i class="fa-solid fa-trash"></i></a>
                         
+                       
+                    </div>
                        
                      
                     </div>
