--- a/views/savedata.ejs
+++ b/views/savedata.ejs
@@ -64,7 +64,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="login" class="login">Logout</a></li>
@@ -78,12 +78,10 @@
             </nav>
             <div class="icons-header">
                 <a href="/"><i class="fa-solid fa-house"></i></a>
-                <a href="/analysis"><i class="fa-solid fa-chart-simple"></i></a>
-                <a href="/farmerassist"><i class="fa-solid fa-handshake-angle"></i></a>
-                <a href="/weather"><i class="fa-solid fa-cloud-bolt"></i></a>
-                <a href="/soilhealth"><i class="fa-solid fa-file-waveform"></i></a>
-                <a href="/crop"><i class="fa-solid fa-wheat-awn"></i></a>
-                
+                <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
+                <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
+                <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
+                <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
             </div>
                 
            
@@ -115,9 +113,8 @@
                    <h1>VOTERS DETAILS</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Capture your soil health journey with Telinso's innovative data storage. Seamlessly record soil details with accompanying pictures. Track changes, monitor trends, and make informed decisions for optimal health. This tool ensures a comprehensive archive, 
-                    empowering users with a visual timeline. Simplify soil health monitoring and enhance farming experiences for a thriving future. 
-                   
+                    Manage elections more effectively with the comprehensive voter database feature. Create and register new voters easily using a detailed map with every house marked for reference. Streamline voter registration and information management, enhancing your election strategy with precise, location-based data. 
+                    Empower your election team with efficient tools for voter creation and management.   
                 </span>
                 
                     
@@ -212,57 +209,12 @@
 
        <section class="footer">
           
-        <div class="row">
+        <div class="footer-col" style="text-align: center;" >     
+         
+               <p > 	&copy; Gokuljith k</p>
            
-                <div class="footer-col" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-            
-            <hr>
-           
-            <div class="footer-col"  >
-                
-                
-                <p>Home</p>
-                <p>Product</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <hr>
-         </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+        </div>
+      </section>
    
    <script>
     // Get current date and time
