--- a/views/soilhealth.ejs
+++ b/views/soilhealth.ejs
@@ -63,7 +63,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="login" class="login">Log out</a></li>
@@ -76,11 +76,11 @@
             </nav>
             <div class="icons-header">
               <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/savedata"><i class="fa-solid fa-cloud-arrow-up"></i></a>
-                <a href="/analysis"><i class="fa-solid fa-chart-simple"></i></a>
-                <a href="/farmerassist"><i class="fa-solid fa-handshake-angle"></i></a>
-                <a href="/weather"><i class="fa-solid fa-cloud-bolt"></i></a>
-                <a href="/crop"><i class="fa-solid fa-wheat-awn"></i></a>
+              <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+              <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
+              <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
+              <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
+             
           </div>
              </div>
          </section>
@@ -91,15 +91,16 @@
                    <h1>VOTERS LIST</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Capture your soil health journey with Telinso's innovative data storage. Seamlessly record soil details with accompanying pictures. Track changes, monitor trends, and make informed decisions for optimal health. This tool ensures a comprehensive archive, 
-                    empowering users with a visual timeline. Simplify soil health monitoring and enhance farming experiences for a thriving future. 
-                   
-                </span>
-                   <div class="votestat">
-                    <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
-                    <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
-                    <a class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
-                   </div>
+                    Manage elections more effectively with the comprehensive voter database feature for Division 33. Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
+                     streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for Division 33. </span>
+                <div class="votestat">
+                  <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
+                  <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
+                  <a class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
+                  <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
+                  <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
+                  <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                 </div>
                    
                        
                     
@@ -118,16 +119,7 @@
        
          
            <section class="contact">
-            <h1>Voters Data</h1>
-            <span class="description"> User Instructions</span>
-                   <span class="overview-description">
-                    <ul class="overview-description">
-                      <li>Click on 'Show Data' to view the stored data.</li>
-                      <li>Utilize the search bar to find soil data with specific details and by month.</li>
-                      <li>View marked locations on the map for easy reference.</li>
-                      <li>Utilize analytics, crop selection features, and data deletion options for enhanced usability.</li>
-                    </ul>
-                   </span>
+            
                    <gmp-map
            id="marker-click-event-example"
            center="11.8309  ,   75.4372"
@@ -137,7 +129,7 @@
          <% soildatas.forEach((row,index) => { %>
            <gmp-advanced-marker
              position="<%= row.coordinates %>"
-             title="<%= row.name %> "
+             title="<%= row.housename %> "
              
              gmp-clickable
            ></gmp-advanced-marker>
@@ -151,11 +143,11 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-location-crosshairs"></i><span>Current Location</span></button>
+         <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/division33/generate-pdf/totalvote">Download List</a></button>
          
 
             <div>
-                <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Search for Soil Data" title="Type in a name">
+              <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Name | House name | Serial No" title="Type in a name">
             </div>
            
                
@@ -205,57 +197,12 @@
 
        <section class="footer">
           
-        <div class="row">
-           
-                <div class="footer-col" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-            
-            <hr>
-           
-            <div class="footer-col"  >
-                
-                
-                <p>Home</p>
-                <p>Product</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <hr>
-         </div>
             <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
+             
+                   <p > 	&copy; Gokuljith k</p>
+               
             </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+      </section>
    <script
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
    defer></script>
@@ -319,30 +266,7 @@
   }
 
   
-  var xValues = ["voted","Not voted"];
   
-    var yValues = [`<%= count1 %>`, `<%= count2 %>`];
-    var barColors = ["green", "red",];
-    
-   
-    new Chart("doughChart", {
-    type: "doughnut",
-      data: {
-        labels: xValues,
-        datasets: [{
-          backgroundColor: barColors,
-          data: yValues
-        }]
-      },
-      options: {
-        legend: {display: false},
-        title: {
-          display: true,
-          text: "Visualization of Soil Sample - Doughnut Graph"
-        }
-      }
-    });
-    
     </script>
 
          </body>
