--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -71,7 +71,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="login" class="login">Log out</a></li>
@@ -84,11 +84,11 @@
             </nav>
             <div class="icons-header">
               <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/savedata"><i class="fa-solid fa-cloud-arrow-up"></i></a>
-                <a href="/analysis"><i class="fa-solid fa-chart-simple"></i></a>
-                <a href="/farmerassist"><i class="fa-solid fa-handshake-angle"></i></a>
-                <a href="/weather"><i class="fa-solid fa-cloud-bolt"></i></a>
-                <a href="/crop"><i class="fa-solid fa-wheat-awn"></i></a>
+              <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+              <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
+              <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
+              <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
+              <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
           </div>
              </div>
          </section>
@@ -99,17 +99,15 @@
                    <h1>BOOTH 138 LIST</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Capture your soil health journey with Telinso's innovative data storage. Seamlessly record soil details with accompanying pictures. Track changes, monitor trends, and make informed decisions for optimal health. This tool ensures a comprehensive archive, 
-                    empowering users with a visual timeline. Simplify soil health monitoring and enhance farming experiences for a thriving future. 
-                   
-                </span>
+                    Manage elections more effectively with the comprehensive voter database feature for booth 138. Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
+                     streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for booth 138.</span>
                    <div class="votestat">
-                    <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
-                    <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
-                    <a class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
-                    <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
-                    <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
-                    <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                    <a  class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
+                    <a href="/booth138voted" class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
+                    <a href="/booth138notvoted" class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
+                    <a href="/booth138avail"  class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
+                    <a href="/booth138open" class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
+                    <a href="/booth138postal" class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
                    </div>
                </div>
                  
@@ -152,7 +150,8 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-location-crosshairs"></i><span>Current Location</span></button>
+         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138/generate-pdf/totalvote">Download List</a></button>
+         
          
 
             <div>
@@ -203,62 +202,21 @@
        </section>
 
        <section class="footer">
-          
-        <div class="row">
-           
-                <div class="footer-col" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-            
-            <hr>
-           
-            <div class="footer-col"  >
-                
-                
-                <p>Home</p>
-                <p>Product</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <hr>
-         </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+           <div class="footer-col" style="text-align: center;" >     
+                <p > 	&copy; Gokuljith k</p>
+           </div>
+      </section>
    <script
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
    defer></script>
     <script>
+
+     const downloadLink = document.getElementById('download-link');
+        downloadLink.addEventListener('click', function() {
+          
+        });
+
+
       function searchData() {
           
           var input = document.getElementById("myInput").value.toLowerCase();
