--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -33,7 +33,7 @@
                     
                 <a href="/" class="logo" style="font-size: 20px;
                 font-family: 'Montserrat', sans-serif;
-                color: #af0303;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
+                color: black;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
         
                 
                         <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
@@ -63,7 +63,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="/logout" class="login">Logout</a></li>
@@ -165,7 +165,7 @@
                                
                            </div>
                            </a>
-                           <a href="/booth139" class="class3">    
+                           <a href="" class="class3">    
                             <div class="product-col"  >
                                 <i class="fa-brands fa-algolia"></i>
                                     <div>
@@ -182,7 +182,7 @@
                </div>
               <div class="row2">
                
-              <a href="/booth140" class="class4">
+              <a href="" class="class4">
                <div class="product-col "  >
                 <i class="fa-brands fa-stack-overflow"></i>
                         <div>
@@ -247,57 +247,12 @@
 
        <section class="footer">
           
-       
-            <div class="row">
-                <div class="footer-col1" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                   
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col1"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col1"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-                <hr>
-            
-                <div class="footer-col1"  >
-                    
-                    
-                    <p>Home</p>
-                    <p>Product</p>
-                    <p>About</p>
-                    <p>Contact</p>
-                </div>
-            <hr>
-    </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+        <div class="footer-col" style="text-align: center;" >     
+         
+               <p > 	&copy; Gokuljith k</p>
+           
+        </div>
+      </section>
    <script>
     // Get current date and time
     var now = new Date();
