--- a/public/footer.css
+++ b/public/footer.css
@@ -66,10 +66,10 @@
   
   
   .footer-col{
-    flex-basis: 23%;
+    
     color: white;
     margin-bottom: 0%;
-    padding: 20px 10px;
+    padding: 0px;
     box-sizing: border-box;
     transition: .5s;  
     
