--- a/public/nav.css
+++ b/public/nav.css
@@ -71,6 +71,13 @@
     border-radius: 50%;
     
   }
+  .header .icons-header .fa-brands{
+    padding: 10px;
+    position: sticky;
+    background: #1d1233;
+    border-radius: 50%;
+    
+  }
  
  
 }
