--- a/public/soilhealth.css
+++ b/public/soilhealth.css
@@ -154,11 +154,6 @@ gmp-map {
   
   }
   
-  .overview-btn:hover{
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-  }
   
 
 .contact{
@@ -250,6 +245,16 @@ gmp-map {
   flex-basis: 20%;
   width: 100%;
   margin-top: -20px;
+}
+.data .features{
+  padding: 10px 5px;
+  margin: 10px;
+  background: #1d1233;
+  color: white;
+  font-size: 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  
 }
 .feature-archive i{
   font-size: 20px;
@@ -441,6 +446,7 @@ svg{
       color: white;
       border-radius: 10px;
     }
+    
     .votestat{
       display: grid;
       grid-template-columns:  auto auto;
@@ -454,6 +460,7 @@ svg{
       padding: 15px;
       margin: 15px;
       border-radius: 10px;
+      text-decoration: none;
    
     }
     .total-vote{
@@ -781,9 +788,11 @@ svg{
     font-size: 18px;
     padding: 0;
   }
-  .overview-btn span{
-  
+  .overview-btn a{
+    font-family: 'Montserrat', sans-serif;
     padding: 0 10px;
+    text-decoration: none;
+    color: whitesmoke;
   }
   .contact input{
        
