--- a/views/voteredit.ejs
+++ b/views/voteredit.ejs
@@ -64,7 +64,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="login" class="login">Logout</a></li>
@@ -115,9 +115,8 @@
                    <h1>VOTERS DETAILS</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Capture your soil health journey with Telinso's innovative data storage. Seamlessly record soil details with accompanying pictures. Track changes, monitor trends, and make informed decisions for optimal health. This tool ensures a comprehensive archive, 
-                    empowering users with a visual timeline. Simplify soil health monitoring and enhance farming experiences for a thriving future. 
-                   
+                    Manage elections more effectively with the comprehensive voter database feature. Edit and update voter details seamlessly using a detailed map with every house marked for easy access. Make precise adjustments to voter information as needed, streamlining your election planning and execution.
+                     Enhance your election strategy with efficient tools for editing and managing voter details.   
                 </span>
                 
                     
