--- a/views/voteredit.ejs
+++ b/views/voteredit.ejs
@@ -78,12 +78,11 @@
             </nav>
             <div class="icons-header">
                 <a href="/"><i class="fa-solid fa-house"></i></a>
-                <a href="/analysis"><i class="fa-solid fa-chart-simple"></i></a>
-                <a href="/farmerassist"><i class="fa-solid fa-handshake-angle"></i></a>
-                <a href="/weather"><i class="fa-solid fa-cloud-bolt"></i></a>
-                <a href="/soilhealth"><i class="fa-solid fa-file-waveform"></i></a>
-                <a href="/crop"><i class="fa-solid fa-wheat-awn"></i></a>
-                
+                <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+                <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
+                <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
+                <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
+                <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
             </div>
                 
            
