--- a/views/138squad5.ejs
+++ b/views/138squad5.ejs
@@ -143,7 +143,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138/generate-pdf/totalvote">Download List</a></button>
+         <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/squad5booth138/generate-pdf/totalvote">Download List</a></button>
           
         
 
