--- a/views/booth138avail.ejs
+++ b/views/booth138avail.ejs
@@ -150,7 +150,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138avail/generate-pdf/totalvote">Download List</a></button>
+         <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138avail/generate-pdf/totalvote">Download List</a></button>
          
          
 
