--- a/views/squad3notvoted.ejs
+++ b/views/squad3notvoted.ejs
@@ -151,7 +151,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/squad3notvoted/generate-pdf/totalvote">Download List</a></button>
+         <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/squad3notvoted/generate-pdf/totalvote">Download List</a></button>
          
          
 
