--- a/views/138squad1.ejs
+++ b/views/138squad1.ejs
@@ -143,7 +143,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138/generate-pdf/totalvote">Download List</a></button>
+         <button class="overview-btn "><i class="fa-solid fa-download"></i><a  id="download-link" href="/squad1booth138/generate-pdf/totalvote">Download List</a></button>
             <div>
               <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Name | House name | Serial No" title="Type in a name">
             </div>
