--- a/views/138squad4.ejs
+++ b/views/138squad4.ejs
@@ -139,7 +139,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138/generate-pdf/totalvote">Download List</a></button>
+         <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/squad4booth138/generate-pdf/totalvote">Download List</a></button>
           
         
             <div>
