--- a/views/voterlist2.ejs
+++ b/views/voterlist2.ejs
@@ -135,7 +135,7 @@
            ></gmp-advanced-marker>
            
          </gmp-map>
-         <button class="overview-btn " onclick="Center()"><i class="fa-solid fa-location-crosshairs"></i><span>Current Location</span></button>
+         <button class="overview-btn " ><i class="fa-solid fa-location-crosshairs"></i><span>Current Location</span></button>
          
 
             <div>
